# jessicabriandebean.github.io

./: .gitignore  LICENSE.md  README.md  analysis_summary.json  enhanced_portfolio_site.html  enhanced_portfolio_site_final.html  enhanced_portfolio_structure_guide.md  github_repo_setup_guide.md  index.html  ml-env.yml  requirements.txt  tf-env.yml  validation_results.csv  visual_setup_guide.tsx
.devcontainer/: devcontainer.json
blog/: kpi_blog.html  portfolio_optimization.html  portfolio_optimization_blog.html
blog/econ_blog/: index.html
blog/kpi_blog/: index.html
career/: resume_template.tsx
code-workspace/: portfolio.code-workspace
data_mining/unemployment_salary/: temp
docs/: environments.md
eda/: overview.md
envs/base/: pyproject.toml
envs/economic_indicators/: pyproject.toml
envs/kpi_recommender_system/: pyproject.toml
envs/portfolio_optimization/: pyproject.toml
envs/product_analytics/: pyproject.toml
machine_learning/scripts/: econ_indicators.pynb  economic_data.ipynb  eda_economic_data.py
nlp/: overview.md
projects/economic_indicators/: Dockerfile  README.md  blog_post_html.html  econ_indicators_app.py  econ_streamlit_app.py  index.html  requirements.txt
projects/economic_indicators/app/: econ_streamlit_app.py
projects/economic_indicators/notebooks/: 00_data.collection.ipynb  01_data_exploration.ipynb  02_feature_engineering.ipynb  03_economic_forecast.ipynb  03_economic_forecast_final.ipynb  data.collection.ipynb
projects/economic_indicators/src/: Untitled.ipynb  (+4 more)
projects/kpi_recommender_system/: Dockerfile  kpi_blog_html.html  requirements.txt
projects/portfolio_optimization/: Dockerfile  README.md  portfolio_optimization_blog.html  portfolio_readme.md  portfolio_setup_fixed.py  portfolio_setup_guide.md  strategy_comparison.csv
projects/product_analytics/: Dockerfile  product_analytics_code.py  product_analytics_notebook.py
scripts/: create_project.py  regen_lockfiles.py  sync_envs.py
workflows/: docker-build.yml  validate-envs.yml
(+26 files in other folders)
