[project]
name = "base-env"
version = "0.1.0"
requires-python = "==3.11.*"
description = "Shared base environment for portfolio projects"
readme = false

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=5.0",
    "pyarrow",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "ipykernel",
    "black",
]