[project]
name = "portfolio_optimization"
version = "0.1.0"
requires-python = "==3.11.*"
description = "Portfolio optimization app"
readme = false

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow",
    "streamlit>=1.31",
    "cvxpy>=1.4",
]

[tool.uv]
dev-dependencies = [
    "pytest",
]